<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.activities.LoginActivity">

        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margentop"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_logo2"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvlogoArtelista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTituloHome"
            android:textSize="@dimen/tamtexto1"
            android:textColor="@color/rosa"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogoLogin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvlogoArtelista"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margenizq"
            android:layout_marginEnd="@dimen/margender">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvUserNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/Requerido"
                app:helperTextTextColor="@color/design_default_color_error"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:layout_marginTop="@dimen/margen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hemail"
                    android:drawablePadding="@dimen/margender"
                    android:drawableStart="@drawable/ic_username_red"
                    android:gravity="start|center_horizontal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/Requerido"
                app:helperTextTextColor="@color/design_default_color_error"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/margentop">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hPassword"
                    android:drawablePadding="@dimen/margender"
                    android:drawableStart="@drawable/ic_password_red"
                    android:maxLength="15"
                    android:gravity="start|center_horizontal"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margentop1"
                android:backgroundTint="@color/rosa"
                android:onClick="onClickArteLista"
                android:text="@string/strIniciarSesion"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvNoTieneCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strNoTieneCuenta"
                    android:textColor="@color/rosa"
                    android:textSize="@dimen/tamtexto2" />

                <TextView
                    android:id="@+id/tvCreeUna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margen"
                    android:layout_toEndOf="@+id/tvNoTieneCuenta"
                    android:text="@string/strCreaUna"
                    android:onClick="onClickCrearCuenta"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="@dimen/tamtexto2"
                    android:textStyle="bold" />
            </RelativeLayout>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>